Table object {
    object_id uuid [not null, primary key]
    bucket text [not null]
    key text [not null]
    version_id text
    size bigint
    created timestamptz [not null]
    ordering text [not null]
    filemanager_id uuid [not null]
}

Table historical_object {
    historical_object_id uuid [not null, primary key]
    bucket text [not null]
    key text [not null]
    version_id text
    size bigint
    created timestamptz [not null]
    deleted timestamptz [not null]
    ordering text [not null]
    filemanager_id uuid [not null]
}

Table attributes {
    attributes_id uuid [not null, primary key]
    attributes jsonb [not null]
    object_id uuid [ref: <> object.object_id]
    historical_object_id uuid [ref: <> historical_object.historical_object_id]
}

Table checksum {
    checksum_id uuid [not null, primary key]
    checksum_name text [not null]
    checksum_value text [not null]
    object_id uuid [ref: > object.object_id]
    historical_object_id uuid [ref: > historical_object.historical_object_id]
}

Table s3_event {
    s3_event_id uuid [not null, primary key]
    event_type event_type [not null]
    event_time timestamptz [not null]
    bucket text [not null]
    key text [not null]
    version_id text
    size bigint
    e_tag text
}

Table s3_metadata {
    s3_metadata_id uuid [not null, primary key]
    storage_class storage_class
    last_modified_date timestamptz
    e_tag text
    is_delete_marker bool
    expiration timestamptz
    restored bool
    archive_status archive_status
    metadata jsonb
    tags jsonb
    object_id uuid [ref: - object.object_id]
    historical_object_id uuid [ref: - historical_object.historical_object_id]
}
